# muse_framework

./: CMakeLists.txt
buildscripts/cmake/: MuseDeps.cmake  SetupDependencies.cmake
framework/audio/common/: signpost.h
framework/audio/main/internal/: playback.cpp
framework/cloud/: cloudmodule.cpp  cloudmodule.h
framework/cloud/audiocom/: iaudiocomservice.h
framework/diagnostics/: CMakeLists.txt
framework/extensions/internal/: extensionsuiengine.cpp
framework/languages/tests/: languagesjson_tests.cpp
framework/stubs/update/: appupdatescenariostub.cpp  appupdatescenariostub.h  appupdateservicestub.cpp
framework/update/: CMakeLists.txt  iappupdatescenario.h  iappupdateservice.h  iupdateconfiguration.h  iupdateinstaller.h  updatemodule.cpp  updatemodule.h
framework/update/helper/: CMakeLists.txt  main.cpp  platform.h  platform_mac.cpp  platform_unix.cpp  platform_win.cpp
framework/update/internal/: appupdatescenario.cpp  appupdatescenario.h  appupdateservice.cpp  appupdateservice.h  downloadfiledevice.cpp  downloadfiledevice.h  updateconfiguration.cpp  updateconfiguration.h
framework/update/internal/platform/mac/: macupdateinstaller.cpp  macupdateinstaller.h
framework/update/internal/platform/stub/: updateinstallerstub.cpp  updateinstallerstub.h
framework/update/qml/Muse/Update/: CMakeLists.txt  UpdateBanner.qml  updatebannermodel.cpp  updatebannermodel.h
framework/update/tests/: appupdateservice_tests.cpp
framework/update/tests/mocks/: updateconfigurationmock.h
tools/codestyle/: uncrustify.cmake
